prost-unwrap-proto-tests/tests/ui/with_this_mod_duplicate.stderr
error: Multiple `with_this_mod` parameters are not allowed
  --> tests/ui/with_this_mod_duplicate.rs:10:6
   |
10 |     .with_this_mod(crate::test)
   |      ^^^^^^^^^^^^^
